--- a/popup.html
+++ b/popup.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="footer">
 				<a class="pedanto" href="https://pedanto.com/index.html" target="_blank" title="WEB студия Pedanto"><img src="img/pedanto.png"/></a>
-				Facebook: <a href="https://www.facebook.com/JohnDicoPunch" target="_blank">Страница Автора</a>
+				GitHub: <a href="https://github.com/cakama3a/RUMIWIFI" target="_blank">Улучшаем плагин вместе</a>
 				<br/>
 				Поддержать: <a href="https://chrome.google.com/webstore/detail/rumiwifi/mbiehbednoakmhlmjcpgpciocekdjabp/reviews" target="_blank" title="Оценить плагин">Поставить 5 звезд</a>
 			</div>
