--- a/popup.html
+++ b/popup.html
@@ -89,7 +89,9 @@
 				<a class="pedanto" href="https://pedanto.com/index.html" target="_blank" title="WEB студия Pedanto"><img src="img/pedanto.png"/></a>
 				GitHub: <a href="https://github.com/cakama3a/RUMIWIFI" target="_blank">Улучшаем плагин вместе</a>
 				<br/>
-				Поддержать: <a href="https://chrome.google.com/webstore/detail/rumiwifi/mbiehbednoakmhlmjcpgpciocekdjabp/reviews" target="_blank" title="Оценить плагин">Поставить 5 звезд</a>
+				Поддержать морально: <a href="https://chrome.google.com/webstore/detail/rumiwifi/mbiehbednoakmhlmjcpgpciocekdjabp/reviews" target="_blank" title="Оценить плагин">Поставить 5</a>
+				<br/>
+				Поддержать финансово: <a href="https://www.patreon.com/bePatron?c=1639915" target="_blank" title="Страница Patreon">Patreon</a>
 			</div>
 		</div>
 	</body>
